<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primary_highContrast"
        android:backgroundTint="@color/md_theme_onBackground"
        android:hint="@string/app_add_task">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee_regular"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/rgTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:fontFamily="@font/abeezee_regular"
                android:text="@string/personal"
                android:textColor="#FFFFFF"
                app:buttonTint="@color/md_theme_primary" />

            <RadioButton
                android:id="@+id/rbWork"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/abeezee_regular"
                android:text="@string/work"
                android:textColor="#FFFFFF"
                app:buttonTint="@color/md_theme_inversePrimary_mediumContrast" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/abeezee_regular"
                android:text="@string/other"
                android:textColor="#FFFFFF"
                app:buttonTint="@color/md_theme_tertiary" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>