<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onBackground"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/app_description"
        android:textColor="@color/md_theme_primaryContainer"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCategories"
        style="@style/AppSubtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_categories"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvCategories" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTasks"
        style="@style/AppSubtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_tasks"
        app:layout_constraintStart_toStartOf="@id/rvCategories"
        app:layout_constraintTop_toBottomOf="@id/rvCategories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tvTasks"
        app:layout_constraintTop_toBottomOf="@id/tvTasks" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="@id/rvTasks"
        app:layout_constraintTop_toBottomOf="@id/rvTasks" />


</androidx.constraintlayout.widget.ConstraintLayout>